--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -4,6 +4,8 @@ body {
   min-width: 984px;
 }
 
+
+
 #hamburger {
   display: none;
 }
@@ -133,8 +135,9 @@ nav a:focus {
 .testimonials-section {
   grid-column: 1 / 4;
   grid-row: 2;
-  margin: 10px;
+
   margin-top: -20px;
+  
 }
 
 .main-div-testimonials {
@@ -142,6 +145,7 @@ nav a:focus {
   height: 180px;
   overflow-x: scroll;
   overflow-y: auto;
+  margin: 0;
 }
 
 .testimonial-scroll-content {
@@ -164,7 +168,7 @@ nav a:focus {
 }
 
 .testimonial {
-  margin: 30px 5px 30px 5px;
+  margin: 10px 0px 10px -30px;
   padding: 22px;
   font-size: 30px;
   background-color: var(--primary);
@@ -176,27 +180,68 @@ nav a:focus {
   justify-content: space-around;
   grid-row: 3;
   grid-column: 1 / 4;
-  margin-top: -20px;
+  margin: -20px 5px 0 0;
+  width: 100%;
 }
+
+/* Weather */
 
 .weather {
-  background-image: url("../images/weather.jpg");
-  background-size: cover;
-  background-position: center;
-  width: 50%;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+
+  background-color: var(--accent2);
+  width: 70%;
   margin: 20px;
-  padding-right: 800px;
-
+  
 }
 
-.weather p{
-  color: #ffffff;
-  font-size: 20px;
-  margin: 50px;
+.search-input {
+  grid-row: 1;
+  grid-column: 1 / 8;
 }
+
+.weather .city {
+  grid-row: 2;
+  grid-column: 1 / 7;
+}
+.weather .temp {
+  grid-row: 3;
+  grid-column: 1 / 7;
+}
+
+.weather .icon {
+  grid-row: 4;
+  grid-column: 1 / 7;
+}
+
+.weather .description {
+  grid-row: 5;
+  grid-column: 1 / 7;
+}
+
+.weather .huminity {
+  grid-row: 6;
+  grid-column: 1 / 7
+}
+
+.weather .wind  {
+  grid-row: 7;
+  grid-column: 1 / 7
+}
+
+
+
+.search-bar {
+ width: 100%;
+ height: 50px;
+}
+
+
+/* Form */
 
 .form-right {
-  width: 40%;
+  width: 100%;
   margin: 20px;
   margin-top: 20px;
   background-color: var(--accent2);
@@ -232,26 +277,33 @@ input[type="email"], textarea {
 
 button,
 [type="submit"]{
-  width: 70%;
-  padding: 20px;
+  width: 30%;
+  padding: 18px;
   color: black;
-  border-radius: 100px;
+  border-radius: 20px;
   font-size: 24px;
+  
+  margin-top: 20px;
 }
 
-.submit-class {
-  margin-left: 166px;
-  margin-top: 10px;
-  margin-right: 50px;
-  margin-bottom: 20px;
-  
+button:hover,
+[type="submit"]:hover{
+  padding: 18px;
+  font-size: 18px;
 }
 
 .spotlight {
   padding: 10px;
-  margin: auto 22px 20px 20px;
+  margin: 0 10px 20px 10px;
 }
 
+.spotlight h2 {
+  font-size: 26px;
+}
+.spotlight p {
+  font-size: 20px;
+  line-height: 2;
+}
 
 footer {
   margin-top: 10px;
@@ -302,7 +354,6 @@ footer {
 }
 
 #lastModified {
-  color:  var(--accent2);
   font-size: 22px;
   text-align: center;
   margin-top: 12px;
